--- a/Online-Clinic/Views/Home/Index.cshtml
+++ b/Online-Clinic/Views/Home/Index.cshtml
@@ -16,105 +16,16 @@
 <link rel="stylesheet" href="~/HomeIndex/css/owl.carousel.css">
 <link rel="stylesheet" href="~/HomeIndex/css/owl.theme.default.min.css">
 
-<!-- HOME -->
-<section id="home" class="slider" data-stellar-background-ratio="0.5" style="background-position: 0px -57.5px;">
-    <div class="container">
-        <div class="row">
-
-            <div class="owl-carousel owl-theme owl-loaded owl-drag">
-                <div class="owl-stage-outer">
-                    <div class="owl-stage" style="transform: translate3d(-3896px, 0px, 0px); transition: all 0s ease 0s; width: 6818px;">
-                        <div class="owl-item cloned" style="width: 974px;">
-                            <div class="item item-second">
-                                <div class="caption">
-                                    <div class="col-md-offset-1 col-md-10">
-                                        <h3>Aenean luctus lobortis tellus</h3>
-                                        <h1>New Lifestyle</h1>
-                                        <a href="#about" class="section-btn btn btn-default btn-gray smoothScroll">More About Us</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div><div class="owl-item cloned" style="width: 974px;">
-                            <div class="item item-third">
-                                <div class="caption">
-                                    <div class="col-md-offset-1 col-md-10">
-                                        <h3>Pellentesque nec libero nisi</h3>
-                                        <h1>Your Health Benefits</h1>
-                                        <a href="#news" class="section-btn btn btn-default btn-blue smoothScroll">Read Stories</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div><div class="owl-item" style="width: 974px;">
-                            <div class="item item-first">
-                                <div class="caption">
-                                    <div class="col-md-offset-1 col-md-10">
-                                        <h3>Let's make your life happier</h3>
-                                        <h1>Healthy Living</h1>
-                                        <a href="#team" class="section-btn btn btn-default smoothScroll">Meet Our Doctors</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div><div class="owl-item" style="width: 974px;">
-                            <div class="item item-second">
-                                <div class="caption">
-                                    <div class="col-md-offset-1 col-md-10">
-                                        <h3>Aenean luctus lobortis tellus</h3>
-                                        <h1>New Lifestyle</h1>
-                                        <a href="#about" class="section-btn btn btn-default btn-gray smoothScroll">More About Us</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div><div class="owl-item active" style="width: 974px;">
-                            <div class="item item-third">
-                                <div class="caption">
-                                    <div class="col-md-offset-1 col-md-10">
-                                        <h3>Pellentesque nec libero nisi</h3>
-                                        <h1>Your Health Benefits</h1>
-                                        <a href="#news" class="section-btn btn btn-default btn-blue smoothScroll">Read Stories</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div><div class="owl-item cloned" style="width: 974px;">
-                            <div class="item item-first">
-                                <div class="caption">
-                                    <div class="col-md-offset-1 col-md-10">
-                                        <h3>Let's make your life happier</h3>
-                                        <h1>Healthy Living</h1>
-                                        <a href="#team" class="section-btn btn btn-default smoothScroll">Meet Our Doctors</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div><div class="owl-item cloned" style="width: 974px;">
-                            <div class="item item-second">
-                                <div class="caption">
-                                    <div class="col-md-offset-1 col-md-10">
-                                        <h3>Aenean luctus lobortis tellus</h3>
-                                        <h1>New Lifestyle</h1>
-                                        <a href="#about" class="section-btn btn btn-default btn-gray smoothScroll">More About Us</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div><div class="owl-nav disabled"><div class="owl-prev">prev</div><div class="owl-next">next</div></div><div class="owl-dots"><div class="owl-dot"><span></span></div><div class="owl-dot"><span></span></div><div class="owl-dot active"><span></span></div></div>
-            </div>
-
-        </div>
-    </div>
-</section>
-
-
 <!-- ABOUT -->
-<section id="about">
+<section id="about" style="margin-top:30px">
     <div class="container">
         <div class="row">
 
             <div class="col-md-6 col-sm-6">
                 <div class="about-info">
-                    <h2 class="wow fadeInUp animated" data-wow-delay="0.6s" style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInUp;">Welcome to Your <i class="fa fa-h-square"></i>ealth Center</h2>
+                    <h2 class="wow fadeInUp animated" data-wow-delay="0.6s" style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInUp;"><i class="fa fa-circle-o"></i>nline-Clinic</h2>
                     <div class="wow fadeInUp animated" data-wow-delay="0.8s" style="visibility: visible; animation-delay: 0.8s; animation-name: fadeInUp;">
-                        <p>Aenean luctus lobortis tellus, vel ornare enim molestie condimentum. Curabitur lacinia nisi vitae velit volutpat venenatis.</p>
-                        <p>Sed a dignissim lacus. Quisque fermentum est non orci commodo, a luctus urna mattis. Ut placerat, diam a tempus vehicula.</p>
+                        <p>En güncel tedavi yöntemleri için kayıt olup doktorlarımızla iletişime geçebilirsiniz</p>
                     </div>
                     <figure class="profile wow fadeInUp animated" data-wow-delay="1s" style="visibility: visible; animation-delay: 1s; animation-name: fadeInUp;">
                         <img src="~/HomeIndex/images/author-image.jpg" class="img-responsive" alt="">
