--- a/Online-Clinic/Views/Shared/_Layout.cshtml
+++ b/Online-Clinic/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-    <title>Health - Medical Website </title>
+    <title>Online Clinic</title>
     <!--
 
     Template 2098 Health
@@ -45,7 +45,7 @@
             <div class="row">
 
                 <div class="col-md-4 col-sm-5">
-                    <p>Welcome to a Professional Health Care</p>
+                    <p>Sağlığınız için en doğru yerdesiniz</p>
                 </div>
 
                 <div class="col-md-8 col-sm-7 text-align-right">
@@ -72,7 +72,7 @@
                     </button>
 
                     <!-- lOGO TEXT HERE -->
-                    <a href="index.html" class="navbar-brand"><i class="fa fa-h-square"></i>ealth Center</a>
+                    <a href="index.html" class="navbar-brand"><i class="fa fa-circle-o"></i>nline-Clinic</a>
                 </div>
 
                 <!-- MENU LINKS -->
