--- a/Online-Clinic/Views/Shared/_LoginPartial.cshtml
+++ b/Online-Clinic/Views/Shared/_LoginPartial.cshtml
@@ -1,17 +1,19 @@
 ﻿@using Microsoft.AspNetCore.Identity
+@using Online_Clinic.Common.SessionOperations
 
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
+
 
 @if (SignInManager.IsSignedIn(User))
 {
     <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })" method="post" id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
             <li>
-                <a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
+                <a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Merhaba @UserManager.GetUserName(User)!</a>
             </li>
             <li>
-                <button type="submit" class="btn btn-link navbar-btn navbar-link">Logout</button>
+                <button type="submit" class="btn btn-link navbar-btn navbar-link">Çıkış</button>
             </li>
         </ul>
     </form>
@@ -19,7 +21,7 @@
 else
 {
 <ul class="nav navbar-nav navbar-right">
-    <li class="appointment-btn"><a asp-area="Identity" asp-page="/Account/Register">Register</a></li>
-    <li class="appointment-btn"><a asp-area="Identity" asp-page="/Account/Login">Login</a></li>
+    <li class="appointment-btn"><a asp-area="Identity" asp-page="/Account/Register">Kaydol</a></li>
+    <li class="appointment-btn"><a asp-area="Identity" asp-page="/Account/Login">Giriş Yap</a></li>
 </ul>
 }
