--- a/Online-Clinic/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Online-Clinic/Areas/Identity/Pages/Account/Register.cshtml
@@ -64,9 +64,7 @@
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-default">
-                <a asp-area="Identity" asp-page="/Account/Manage/Index">Kaydol</a>
-            </button>
+            <button type="submit" class="btn btn-default">Kaydol</button>
         </form>
     </div>
 </div>
