--- a/Online-Clinic/Views/_ViewImports.cshtml
+++ b/Online-Clinic/Views/_ViewImports.cshtml
@@ -1,5 +1,7 @@
 ﻿@using Online_Clinic
 @using Online_Clinic.Models
 
+@using Online_Clinic.Common.ConstantsModels
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@addTagHelper *, Online_Clinic
+@*@addTagHelper *, Online_Clinic*@
