--- a/Online-Clinic/Views/Shared/_Layout.cshtml
+++ b/Online-Clinic/Views/Shared/_Layout.cshtml
@@ -77,7 +77,7 @@
                     </button>
 
                     <!-- lOGO TEXT HERE -->
-                    <a href="index.html" class="navbar-brand"><i class="fa fa-circle-o"></i>nline-Clinic</a>
+                    <a href="index.html" class="navbar-brand">Online-Clinic</a>
                 </div>
 
                 <!-- MENU LINKS -->
@@ -85,9 +85,9 @@
                     <partial name="_LoginPartial" />
                     <ul class="nav navbar-nav navbar-right">
                         <li class="active"><a asp-controller="Home" asp-action="Index" class="smoothScroll">Anasayfa</a></li>
-                        <li><a asp-controller="Visitor" asp-action="Index" class="smoothScroll">Bağışçılar</a></li>
-                        <li><a asp-controller="Visitor" asp-action="Index" class="smoothScroll">Doktorlar</a></li>
-                        <li><a asp-controller="Visitor" asp-action="Index" class="smoothScroll">Hasta Hikayeleri</a></li>
+                        <li><a asp-controller="Bağışçı" asp-action="Index" class="smoothScroll">Bağışçılar</a></li>
+                        <li><a asp-controller="Doktor" asp-action="Index" class="smoothScroll">Doktorlar</a></li>
+                        <li><a asp-controller="Hasta" asp-action="Index" class="smoothScroll">Hasta Hikayeleri</a></li>
                         @if (!SignInManager.IsSignedIn(User))
                         {
                             if (User.IsInRole(ResultConstant.HastaRole))
@@ -117,8 +117,8 @@
 
                 <div class="col-md-4 col-sm-4">
                     <div class="footer-thumb">
-                        <h4 class="wow fadeInUp" data-wow-delay="0.4s" style="visibility: hidden; animation-delay: 0.4s; animation-name: none;">Contact Info</h4>
-                        <p>Fusce at libero iaculis, venenatis augue quis, pharetra lorem. Curabitur ut dolor eu elit consequat ultricies.</p>
+                        <h4 class="wow fadeInUp" data-wow-delay="0.4s" style="visibility: hidden; animation-delay: 0.4s; animation-name: none;">İletişim Bilgileri</h4>
+                        <p>Detaylı bilgi almak için bize ulaşınız</p>
 
                         <div class="contact-info">
                             <p><i class="fa fa-phone"></i> 010-070-0170</p>
@@ -129,14 +129,14 @@
 
                 <div class="col-md-4 col-sm-4">
                     <div class="footer-thumb">
-                        <h4 class="wow fadeInUp" data-wow-delay="0.4s" style="visibility: hidden; animation-delay: 0.4s; animation-name: none;">Latest News</h4>
+                        <h4 class="wow fadeInUp" data-wow-delay="0.4s" style="visibility: hidden; animation-delay: 0.4s; animation-name: none;">Son Haberler</h4>
                         <div class="latest-stories">
                             <div class="stories-image">
                                 <a href="#"><img src="~/HomeIndex/images/news-image.jpg" class="img-responsive" alt=""></a>
                             </div>
                             <div class="stories-info">
-                                <a href="#"><h5>Amazing Technology</h5></a>
-                                <span>March 08, 2018</span>
+                                <a href="#"><h5>Sağlık Haberleri</h5></a>
+                                <span>14 Mart 2020</span>
                             </div>
                         </div>
 
@@ -145,8 +145,8 @@
                                 <a href="#"><img src="~/HomeIndex/images/news-image.jpg" class="img-responsive" alt=""></a>
                             </div>
                             <div class="stories-info">
-                                <a href="#"><h5>New Healing Process</h5></a>
-                                <span>February 20, 2018</span>
+                                <a href="#"><h5>Sağlık Haberleri</h5></a>
+                                <span>16 Şubat 2020</span>
                             </div>
                         </div>
                     </div>
@@ -155,10 +155,8 @@
                 <div class="col-md-4 col-sm-4">
                     <div class="footer-thumb">
                         <div class="opening-hours">
-                            <h4 class="wow fadeInUp" data-wow-delay="0.4s" style="visibility: hidden; animation-delay: 0.4s; animation-name: none;">Opening Hours</h4>
-                            <p>Monday - Friday <span>06:00 AM - 10:00 PM</span></p>
-                            <p>Saturday <span>09:00 AM - 08:00 PM</span></p>
-                            <p>Sunday <span>Closed</span></p>
+                            <h4 class="wow fadeInUp" data-wow-delay="0.4s" style="visibility: hidden; animation-delay: 0.4s; animation-name: none;">Randevu Saatlerimiz</h4>
+                            <p>Pazartesi-Cuma <span>08.00 - 17.00</span></p>
                         </div>
 
                         <ul class="social-icon">
@@ -173,7 +171,7 @@
                     <div class="col-md-4 col-sm-6">
                         <div class="copyright-text">
                             <p>
-                                Copyright © 2018 Your Company
+                                Copyright © 2018
 
                                 | Design: Tooplate
                             </p>
@@ -181,10 +179,8 @@
                     </div>
                     <div class="col-md-6 col-sm-6">
                         <div class="footer-link">
-                            <a href="#">Laboratory Tests</a>
-                            <a href="#">Departments</a>
-                            <a href="#">Insurance Policy</a>
-                            <a href="#">Careers</a>
+                            <a href="#">Doktorlarımız</a>
+                            <a href="#">Bağışçılarımız</a>
                         </div>
                     </div>
                     <div class="col-md-2 col-sm-2 text-align-center">
