--- a/Online-Clinic/Views/Shared/_LoginPartial.cshtml
+++ b/Online-Clinic/Views/Shared/_LoginPartial.cshtml
@@ -3,7 +3,6 @@
 
 @inject SignInManager<Online_Clinic.Data.DbModels.Visitor> SignInManager
 @inject UserManager<Online_Clinic.Data.DbModels.Visitor> UserManager
-
 @*@if (SignInManager.IsSignedIn(User))
     {
         <li class="nav-item">
@@ -27,15 +26,23 @@
 
 @if (SignInManager.IsSignedIn(User))
 {
-    var girisYapanKullanici = await UserManager.GetUserAsync(User);
-    var kullanicininTanimlandigiRoller = await UserManager.GetRolesAsync(girisYapanKullanici);
 
+    @*<li class="nav-item">
+            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Merhaba<b> @girisYapanKullanici.UserName!</b></a>
+        </li>
+        <li class="nav-item">
+            <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+            </form>
+        </li>*@
     <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Merhaba<b> @girisYapanKullanici.UserName!</b></a>
+        <a class="nav-link text-white" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">
+            @await Component.InvokeAsync("UserName")
+        </a>
     </li>
     <li class="nav-item">
         <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+            <button type="submit" class="nav-link btn btn-link text-white">Logout</button>
         </form>
     </li>
 }
