--- a/Online-Clinic/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/Online-Clinic/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,4 +1,4 @@
-﻿@inject SignInManager<IdentityUser> SignInManager
+﻿@inject SignInManager<Online_Clinic.Data.DbModels.Visitor> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
