--- a/Online-Clinic/Views/Home/Index.cshtml
+++ b/Online-Clinic/Views/Home/Index.cshtml
@@ -124,20 +124,20 @@
 
 
 <!-- NEWS -->
-<section id="news" data-stellar-background-ratio="2.5" style="background-position: 0px 3741.6px;">
+<!--<section id="news" data-stellar-background-ratio="2.5" style="background-position: 0px 3741.6px;">
     <div class="container">
         <div class="row">
 
-            <div class="col-md-12 col-sm-12">
+            <div class="col-md-12 col-sm-12">-->
                 <!-- SECTION TITLE -->
-                <div class="section-title wow fadeInUp" data-wow-delay="0.1s" style="visibility: hidden; animation-delay: 0.1s; animation-name: none;">
+                <!--<div class="section-title wow fadeInUp" data-wow-delay="0.1s" style="visibility: hidden; animation-delay: 0.1s; animation-name: none;">
                     <h2>Latest News</h2>
                 </div>
             </div>
 
-            <div class="col-md-4 col-sm-6">
+            <div class="col-md-4 col-sm-6">-->
                 <!-- NEWS THUMB -->
-                <div class="news-thumb wow fadeInUp" data-wow-delay="0.4s" style="visibility: hidden; animation-delay: 0.4s; animation-name: none;">
+                <!--<div class="news-thumb wow fadeInUp" data-wow-delay="0.4s" style="visibility: hidden; animation-delay: 0.4s; animation-name: none;">
                     <a href="news-detail.html">
                         <img src="~/HomeIndex/images/news-image1.jpg" class="img-responsive" alt="">
                     </a>
@@ -156,9 +156,9 @@
                 </div>
             </div>
 
-            <div class="col-md-4 col-sm-6">
+            <div class="col-md-4 col-sm-6">-->
                 <!-- NEWS THUMB -->
-                <div class="news-thumb wow fadeInUp" data-wow-delay="0.6s" style="visibility: hidden; animation-delay: 0.6s; animation-name: none;">
+                <!--<div class="news-thumb wow fadeInUp" data-wow-delay="0.6s" style="visibility: hidden; animation-delay: 0.6s; animation-name: none;">
                     <a href="news-detail.html">
                         <img src="~/HomeIndex/images/news-image2.jpg" class="img-responsive" alt="">
                     </a>
@@ -177,9 +177,9 @@
                 </div>
             </div>
 
-            <div class="col-md-4 col-sm-6">
+            <div class="col-md-4 col-sm-6">-->
                 <!-- NEWS THUMB -->
-                <div class="news-thumb wow fadeInUp" data-wow-delay="0.8s" style="visibility: hidden; animation-delay: 0.8s; animation-name: none;">
+                <!--<div class="news-thumb wow fadeInUp" data-wow-delay="0.8s" style="visibility: hidden; animation-delay: 0.8s; animation-name: none;">
                     <a href="news-detail.html">
                         <img src="~/HomeIndex/images/news-image3.jpg" class="img-responsive" alt="">
                     </a>
@@ -200,7 +200,7 @@
 
         </div>
     </div>
-</section>
+</section>-->
 
 <!-- MAKE AN APPOINTMENT -->
 <section id="appointment" data-stellar-background-ratio="3" style="background-position: 0px 6726.2px;">
@@ -275,65 +275,6 @@
     </div>
 </section>
 
-
-<!-- MAKE AN APPOINTMENT -->
-<!--<section id="appointment" data-stellar-background-ratio="3" style="background-position: 0px 6726.2px;">
-    <div class="container">
-        <div class="row">
-
-            <div class="col-md-6 col-sm-6">
-                <img src="~/HomeIndex/images/appointment-image.jpg" class="img-responsive" alt="">
-            </div>
-
-            <div class="col-md-6 col-sm-6">-->
-<!-- CONTACT FORM HERE -->
-<!--<form id="appointment-form" role="form" method="post" action="#">-->
-<!-- SECTION TITLE -->
-<!--<div class="section-title wow fadeInUp" data-wow-delay="0.4s" style="visibility: hidden; animation-delay: 0.4s; animation-name: none;">
-                        <h2>Make an appointment</h2>
-                    </div>
-
-                    <div class="wow fadeInUp" data-wow-delay="0.8s" style="visibility: hidden; animation-delay: 0.8s; animation-name: none;">
-                        <div class="col-md-6 col-sm-6">
-                            <label for="name">Name</label>
-                            <input type="text" class="form-control" id="name" name="name" placeholder="Full Name">
-                        </div>
-
-                        <div class="col-md-6 col-sm-6">
-                            <label for="email">Email</label>
-                            <input type="email" class="form-control" id="email" name="email" placeholder="Your Email">
-                        </div>
-
-                        <div class="col-md-6 col-sm-6">
-                            <label for="date">Select Date</label>
-                            <input type="date" name="date" value="" class="form-control">
-                        </div>
-
-                        <div class="col-md-6 col-sm-6">
-                            <label for="select">Select Department</label>
-                            <select class="form-control">
-                                <option>General Health</option>
-                                <option>Cardiology</option>
-                                <option>Dental</option>
-                                <option>Medical Research</option>
-                            </select>
-                        </div>
-
-                        <div class="col-md-12 col-sm-12">
-                            <label for="telephone">Phone Number</label>
-                            <input type="tel" class="form-control" id="phone" name="phone" placeholder="Phone">
-                            <label for="Message">Additional Message</label>
-                            <textarea class="form-control" rows="5" id="message" name="message" placeholder="Message"></textarea>
-                            <button type="submit" class="form-control" id="cf-submit" name="submit">Submit Button</button>
-                        </div>
-                    </div>
-                </form>
-            </div>
-
-        </div>
-    </div>
-</section>-->
-<!-- SCRIPTS -->
 <script src="~/HomeIndex/js/jquery.js"></script>
 <script src="~/HomeIndex/js/bootstrap.min.js"></script>
 <script src="~/HomeIndex/js/jquery.sticky.js"></script>
