--- a/Online-Clinic/Views/Shared/_Layout.cshtml
+++ b/Online-Clinic/Views/Shared/_Layout.cshtml
@@ -88,6 +88,7 @@
                         <li><a asp-controller="Bağışçı" asp-action="Index" class="smoothScroll">Bağışçılar</a></li>
                         <li><a asp-controller="Doktor" asp-action="Index" class="smoothScroll">Doktorlar</a></li>
                         <li><a asp-controller="Hasta" asp-action="Index" class="smoothScroll">Hasta Hikayeleri</a></li>
+                        <li><a asp-controller="Talep" asp-action="Index" class="smoothScroll">Bağış Talebi</a></li>
                         @if (!SignInManager.IsSignedIn(User))
                         {
                             if (User.IsInRole(ResultConstant.HastaRole))
@@ -96,17 +97,6 @@
                             }
                         }
                     </ul>
-                    @if (SignInManager.IsSignedIn(User))
-                    {
-                        if (User.IsInRole(ResultConstant.AdminRole))
-                        {
-                            <ul class="nav navbar-nav navbar-right">
-                                <li><a asp-controller="Bağışçı" asp-action="Delete" class="smoothScroll">Bağışçılar</a></li>
-                                <li><a asp-controller="Doktor" asp-action="Delete" class="smoothScroll">Doktorlar</a></li>
-                                <li><a asp-controller="Hasta" asp-action="Delete" class="smoothScroll">Hasta Hikayeleri</a></li>
-                            </ul>
-                        }
-                    }
                 </div>
             </div>
         </section>
@@ -181,9 +171,9 @@
                     <div class="col-md-4 col-sm-6">
                         <div class="copyright-text">
                             <p>
-                                Copyright © 2018
+                                Copyright © 2020
 
-                                | Design: Tooplate
+                                | Online-Clinic
                             </p>
                         </div>
                     </div>
