--- a/Online-Clinic/Views/Home/Index.cshtml
+++ b/Online-Clinic/Views/Home/Index.cshtml
@@ -25,15 +25,16 @@
 
             <div class="col-md-6 col-sm-6">
                 <div class="about-info">
-                    <h2 class="wow fadeInUp animated" data-wow-delay="0.6s" style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInUp;"><i class="fa fa-circle-o"></i>nline-Clinic</h2>
+                    <h2 class="wow fadeInUp animated" data-wow-delay="0.6s" style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInUp;">Online-Clinic</h2>
                     <div class="wow fadeInUp animated" data-wow-delay="0.8s" style="visibility: visible; animation-delay: 0.8s; animation-name: fadeInUp;">
                         <p>En güncel tedavi yöntemleri için kayıt olup doktorlarımızla iletişime geçebilirsiniz</p>
                     </div>
                     <figure class="profile wow fadeInUp animated" data-wow-delay="1s" style="visibility: visible; animation-delay: 1s; animation-name: fadeInUp;">
                         <img src="~/HomeIndex/images/author-image.jpg" class="img-responsive" alt="">
                         <figcaption>
-                            <h3>Dr. Neil Jackson</h3>
-                            <p>General Principal</p>
+                            <h3>
+                                Doktorlarımıza ulaşmak için <a asp-controller="Doktor" asp-action="Index">tıklayınız</a>
+                            </h3>
                         </figcaption>
                     </figure>
                 </div>
