--- a/Online-Clinic/Views/Shared/_Layout.cshtml
+++ b/Online-Clinic/Views/Shared/_Layout.cshtml
@@ -56,7 +56,7 @@
                 <div class="col-md-8 col-sm-7 text-align-right">
                     <span class="phone-icon"><i class="fa fa-phone"></i> 010-060-0160</span>
                     <span class="date-icon"><i class="fa fa-calendar-plus-o"></i> 08.00 - 17.00 (Pazartesi-Cuma)</span>
-                    <span class="email-icon"><i class="fa fa-envelope-o"></i> <a href="#">info@company.com</a></span>
+                    <span class="email-icon"><i class="fa fa-envelope-o"></i> <a href="#">info@onlineclinic.com</a></span>
                 </div>
 
             </div>
@@ -77,18 +77,24 @@
                     </button>
 
                     <!-- lOGO TEXT HERE -->
-                    <a href="index.html" class="navbar-brand">Online-Clinic</a>
+                    <a asp-controller="Home" asp-action="Index" class="navbar-brand">Online-Clinic</a>
                 </div>
 
                 <!-- MENU LINKS -->
                 <div class="collapse navbar-collapse">
                     <partial name="_LoginPartial" />
                     <ul class="nav navbar-nav navbar-right">
-                        <li class="active"><a asp-controller="Home" asp-action="Index" class="smoothScroll">Anasayfa</a></li>
-                        <li><a asp-controller="Bağışçı" asp-action="Index" class="smoothScroll">Bağışçılar</a></li>
-                        <li><a asp-controller="Doktor" asp-action="Index" class="smoothScroll">Doktorlar</a></li>
-                        <li><a asp-controller="Hasta" asp-action="Index" class="smoothScroll">Hasta Hikayeleri</a></li>
-                        <li><a asp-controller="Talep" asp-action="Index" class="smoothScroll">Bağış Talebi</a></li>
+
+                        @if (!SignInManager.IsSignedIn(User))
+                        {
+                            if (User.IsInRole(ResultConstant.VisitorRole))
+                            {
+                                <li class="active"><a asp-controller="Home" asp-action="Index" class="smoothScroll">Anasayfa</a></li>
+                                <li><a asp-controller="Bağışçı" asp-action="Index" class="smoothScroll">Bağışçılar</a></li>
+                                <li><a asp-controller="Doktor" asp-action="Index" class="smoothScroll">Doktorlar</a></li>
+                                <li><a asp-controller="Hasta" asp-action="Index" class="smoothScroll">Hasta Hikayeleri</a></li>
+                            }
+                        }
                         @if (!SignInManager.IsSignedIn(User))
                         {
                             if (User.IsInRole(ResultConstant.HastaRole))
@@ -96,7 +102,7 @@
                                 <li><a asp-controller="Talep" asp-action="Create" class="smoothScroll">Bağış Talebi</a></li>
                             }
                         }
-                    </ul>
+                    </ul>        
                 </div>
             </div>
         </section>
